--- a/browser/package.json
+++ b/browser/package.json
@@ -29,8 +29,8 @@
     "electronpostinstall": "echo electron-builder install-app-deps",
     "compile": "tsc -p tsconfig.json",
     "webpack": "webpack",
-    "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/merge-contrib.js && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
-    "build_for_electron": "npm run build && rm -f dist/public/cacheServiceWorker.js",
+    "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/merge-contrib.js && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js && rm -f dist/public/client.config.electron.json",
+    "build_for_electron": "npm run build && cd ./../telnet_proxy && npm install && npm run build && npm run webpack && cd ./../browser && cp ./../telnet_proxy/dist/telnet_proxy/bundle/telnet_proxy.js dist/public/telnet_proxy.js && cp -f static/public/client.config.electron.json dist/public/client.config.json && rm -f dist/public/cacheServiceWorker.js",
     "build-dev": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/merge-contrib.js && tsc -p tsconfig.json && webpack --mode=development --config webpack.config.dev.js",
     "start": "tsc -p tsconfig.json && webpack-dev-server --config ./webpack.config.dev.js --hot",
     "build-test": "tsc -p tsconfig.test.json && webpack --config webpack.config.test.js",
@@ -60,6 +60,7 @@
     "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
     "electron-is-dev": "^1.2.0",
+    "electron-reload": "^2.0.0-alpha.1",
     "highlight.js": "^11.7.0",
     "hotkeys-js": "^3.8.7",
     "idb": "^7.1.1",
