--- a/browser/package.json
+++ b/browser/package.json
@@ -2,7 +2,7 @@
   "name": "ts2-client",
   "description": "Tempora Sanguinis 2 Client",
   "main": "electron_main.js",
-  "version": "1.4.8",
+  "version": "1.4.9",
   "repository": {
     "type": "git",
     "url": "https://github.com/temporasanguinis/TS2-Client"
@@ -98,7 +98,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "build": {
-    "productName": "ts2-client",
+    "productName": "Tempora Sanguinis",
     "appId": "ts2.client",
     "icon": "src/icons/favicon-256x256.png",
     "files": [
