--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -26,7 +26,7 @@ pytest==7.2.0
 pytest-mock==3.1.1
 requests==2.31.0
 six==1.15.0
-urllib3==1.26.17
+urllib3>=1.26.18
 wcwidth==0.2.3
 Werkzeug==>=2.2.3
 WTForms==2.3.1
