--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,4 +38,6 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
+          allowUpdates: true
+          updateOnlyUnreleased: true
           artifacts: "release-web.zip"
