--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.3.1
         with:
           ref: ${{ github.ref }}
-          check-name: 'Web finished'
+          check-name: 'release-web'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
           
