--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,11 +39,17 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
+          omitBodyDuringUpdate: true
+          omitBody: true
+          draft: true
           artifacts: "release-web.zip"
           
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
+          omitBodyDuringUpdate: true
+          omitBody: true
+          draft: true
           artifacts: "./telnet_proxy/dist/telnet_proxy/bundle/telnet_proxy.js"
 
       - name: Web finished
