--- a/browser/package.json
+++ b/browser/package.json
@@ -2,7 +2,7 @@
   "name": "ts2-client",
   "description": "Tempora Sanguinis 2 Client",
   "main": "electron_main.js",
-  "version": "1.5.3",
+  "version": "1.6.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/temporasanguinis/TS2-Client"
@@ -65,6 +65,7 @@
     "idb": "^7.1.1",
     "jquery": "^3.6.0",
     "jqwidgets-framework": "^9.1.6",
+    "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
     "markdown-it": "^12.3.2",
     "marked": "^4.2.5",
@@ -83,6 +84,7 @@
     "@node-minify/html-minifier": "^6.2.0",
     "@node-minify/no-compress": "^6.2.0",
     "@node-minify/terser": "^6.2.0",
+    "@types/lodash": "^4.14.202",
     "@types/resize-observer-browser": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.0",
