aggiungo log e try catch per approve

--- a/telnet_proxy/.vscode/launch.json
+++ b/telnet_proxy/.vscode/launch.json
@@ -7,7 +7,7 @@
             "name": "Launch Proxy",
             "preLaunchTask": "build proxy",
             "program": "${workspaceFolder}/src/app.ts",
-            "args": ["../dist/telnet_proxy/bundle/config.json"]
+            "args": ["-v","2","../dist/telnet_proxy/bundle/config.json"]
         }
     ]
   }
