--- a/browser/package.json
+++ b/browser/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^2.1.5",
     "@types/aes-js": "^3.1.1",
+    "@types/codemirror": "^5.60.15",
     "@types/fingerprintjs2": "^2.0.0",
     "@types/jquery": "^2.0.60",
     "@types/marked": "^4.0.8",
@@ -54,7 +55,6 @@
     "@types/socket.io-client": "^1.4.36",
     "aes-js": "^3.1.2",
     "axios": "^1.6.2",
-    "codemirror": "^5.65.1",
     "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
     "electron-is-dev": "^1.2.0",
