--- a/browser/tsconfig.json
+++ b/browser/tsconfig.json
@@ -14,7 +14,7 @@
             "ScriptHost"
         ],
         "types": [
-            "jquery", "resize-observer-browser"
+            "jquery", "resize-observer-browser", "codemirror"
         ],
         "typeRoots": ["node_modules/@types"],
     },
