--- a/browser/package.json
+++ b/browser/package.json
@@ -87,6 +87,7 @@
     "@types/lodash": "^4.14.202",
     "@types/resize-observer-browser": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
+    "codemirror": "^5.65.1",
     "copy-webpack-plugin": "^6.0.0",
     "electron": "^27.0.0",
     "electron-builder": "^24.6.4",
