--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 28,
-	"message": "BugFix e lazzaretto",
-	"date": "17.12.2023"
+	"version": 30,
+	"message": "Ricontrollo Cyrodiil",
+	"date": "31.08.2024"
 }
