--- a/browser/.vscode/settings.json
+++ b/browser/.vscode/settings.json
@@ -14,6 +14,7 @@
         "**/build/**/*.js": true,
         "**/build/**/*.js.map": true,
     },
+    "breadcrumbs.symbolSortOrder": "name",
     "search.exclude": {
         "**/.git": true,
         "**/node_modules": true,
