--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 30,
-	"message": "Ricontrollo Cyrodiil",
-	"date": "31.08.2024"
+	"version": 38,
+	"message": "Correzioni Other command",
+	"date": "26.10.2024"
 }
