--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -4,18 +4,18 @@ certifi==>=2022.12.07
 chardet==3.0.4
 click==7.1.2
 coverage==5.1
-dnspython==1.16.0
+dnspython>=2.6.1
 email-validator==1.1.1
 Flask==2.2.5
-Flask-Cors==3.0.9
+Flask-Cors>=4.0.2
 Flask-HTTPAuth==4.0.0
 Flask-Mail==0.9.1
 Flask-WTF==0.14.3
-gunicorn==20.0.4
-idna==2.9
+gunicorn>=22.0.0
+idna>=3.7
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
-Jinja2==2.11.3
+Jinja2>=3.1.4
 MarkupSafe==1.1.1
 more-itertools==8.3.0
 packaging==20.4
@@ -24,10 +24,10 @@ py==1.11.1
 pyparsing==2.4.7
 pytest==7.2.0
 pytest-mock==3.1.1
-requests==2.31.0
+requests>=2.32.0
 six==1.15.0
 urllib3>=1.26.18
 wcwidth==0.2.3
 Werkzeug==>=2.2.3
 WTForms==2.3.1
-zipp==3.1.0
+zipp>=3.19.1
