--- a/browser/package.json
+++ b/browser/package.json
@@ -2,7 +2,7 @@
   "name": "ts2-client",
   "description": "Tempora Sanguinis 2 Client",
   "main": "electron_main.js",
-  "version": "v2.0.5-beta5",
+  "version": "v2.0.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/temporasanguinis/TS2-Client"
