--- a/browser/static/public/client.config.electron.json
+++ b/browser/static/public/client.config.electron.json
@@ -1,5 +1,7 @@
 {
 	"apiBaseUrl": null,
 	"socket_io_host": "http://localhost:4040",
-	"socket_io_port": 4040
+	"socket_io_port": 4040,
+	"rtcHost": "mud.temporasanguinis.it",
+	"rtcPort": 5678
 }
