--- a/browser/package.json
+++ b/browser/package.json
@@ -56,6 +56,7 @@
     "@types/webrtc": "^0.0.44",
     "aes-js": "^3.1.2",
     "axios": "^1.6.2",
+    "core-js-pure": "^3.39.0",
     "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
     "electron-is-dev": "^1.2.0",
