--- a/browser/static/public/client.config.electron.json
+++ b/browser/static/public/client.config.electron.json
@@ -2,6 +2,6 @@
 	"apiBaseUrl": null,
 	"socket_io_host": "http://localhost:4040",
 	"socket_io_port": 4040,
-	"rtcHost": "mud.temporasanguinis.it",
+	"rtcHost": "https://mud.temporasanguinis.it",
 	"rtcPort": 5678
 }
