rtc can be disabled, fixes to layoutmanager, fixes to mapper

--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 38,
-	"message": "Correzioni Other command",
-	"date": "26.10.2024"
+    "version": 41,
+    "date": "21/11/2024",
+    "message": "Correzioni a balsat e altre cose"
 }
